--- a/src/components/Terminal/styles.module.css
+++ b/src/components/Terminal/styles.module.css
@@ -2,5 +2,5 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin: 20px;
+  padding: 20px;
 }
